# noteshrink-c

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  format
include/: noteshrink.h
src/: main.cpp  noteshrink.cpp  stb_image.cpp
test/: stb_image.cpp  test.cpp
